[tool.poetry]
name = "py-aiger"
readme="README.md"
version = "6.1.3"
repository = "https://github.com/mvcisback/py-aiger"
description = "A python library for manipulating sequential and-inverter gates."
authors = ["Marcell Vazquez-Chanlatte <marcell.vc@eecs.berkeley.edu>"]
license = "MIT"
packages = [
    { include = "aiger" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^20.0.0"
bidict = "^0.21.0"
funcy = "^1.12"
parsimonious = "^0.8.1"
toposort = "^1.5"
pyrsistent = "^0.17.0"

[tool.poetry.dev-dependencies]
hypothesis_cfg = {git = "git://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "^5.0.0"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^2.0.0"
coverage = "^5.2.1"
codecov = "^2.0"
py-aiger-ptltl = {git = "git://github.com/mvcisback/py-aiger-past-ltl.git"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
